classDiagram
direction LR
class StackQueueController {
    -List~BuoyStack~ stacks
    -List~StackReservation~ reservations
    -ConveyorController conveyor
    -BuoyTransferController transfers
    -StackQueueVisual visual
    -InputSystem inputSystem
    -StackQueueExit exit
    -bool accepting
    -bool failed
    +IReadOnlyList~BuoyStack~ Stacks
    +Action Full
    +StackQueueController(ConveyorController conveyor, BuoyTransferController transfers, StackQueueVisual visual, InputSystem inputSystem, StackQueueExit exit)
    +Initialize(int count) void
    +SetPaused(bool paused) void
    -RefreshInput(int index) void
    -OnStackClicked(BuoyStack stack) void
    -FinishExport(int index, StackReservation reservation) void
    -StartReceive(int index, StackReservation reservation, ConveyorBuoyGroup group, int baseIndex) void
    +TryReceive(ConveyorBuoyGroup group) bool
    -FindStack(int color) int
    +Clear() void
}
class PendingReceive {
    +ConveyorBuoyGroup Group
    +int BaseIndex
}
class StackReservation {
    +bool Outgoing
    +int Incoming
    +List~PendingReceive~ Pending
    +int Count
    +int ColorCode
}
class StackQueueExit {
    -StackQueueController queue
    +Initialize(StackQueueController controller) void
    +Clear() void
    -Awake() void
    -OnTriggerEnter(Collider other) void
    -OnTriggerStay(Collider other) void
    -DetectGroup(Collider other) void
    ~ContainsGroup(ConveyorBuoyGroup group) bool
    -OnDrawGizmosSelected() void
}
MonoBehaviour <|-- StackQueueExit
class StackQueueVisual {
    -Transform spawnRoot
    -BuoyStackVisual stackPrefab
    -float stackSpacing
    -float receiveFlightDuration
    -float receiveLaunchDelay
    -float fixedStackHeight
    -float receiveDescentDuration
    -float receiveTopClearance
    +float ReceiveDescentDuration
    +float ReceiveTopClearance
    +float ReceiveFlightDuration
    +float ReceiveLaunchDelay
    +ValidateSetup() void
    +GetStackOffset(int index, int count) Vector3
    ~SpawnStack(int index, int count) BuoyStackVisual
}
MonoBehaviour <|-- StackQueueVisual
StackQueueController *-- StackReservation
StackQueueController --> StackQueueVisual
StackQueueController --> StackQueueExit : departure guard
StackReservation *-- PendingReceive
StackQueueExit --> StackQueueController : trigger entry
